--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
 
 
-                    <!-- STEP -->
+                    <!-- 0 STEP -->
                     <div class="col-5">
                       <h2>See all ToDo  <button type="button" class="btn btn-primary btn-sm"v-on:click="view">View</button></h2>
                     <br>
@@ -85,19 +85,6 @@
                   </div>
                   </div>
                     <br>
-                      <!--<input v-model="name" placeholder="name"> 
-                    <input v-model="description" placeholder="description"> 
-                    <input v-model="assignedTo" placeholder="assignedTo"> 
-                    <button type="button" class="btn btn-primary btn-sm"v-on:click="addToDo">addToDo</button>
-                    
-                    <br>
-                    <input v-model="assignedTo" placeholder="assignedTo">
-                    <button type="button" class="btn btn-primary btn-sm" v-on:click="getToDoByUser">getToDoByUser</button>
-
-                    <br>
-                    <input v-model="completed" placeholder="true || false">
-                    <button type="button" class="btn btn-primary btn-sm"v-on:click="getToDoByCompleted">getToDoByCompleted</button>
-        -->
                 </div>
                                 
             </body>
